--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -83,7 +83,7 @@
         
             {# navigasjonslenker #}
             <ul class="nav">
-                <li><a href="/?">Hjem</a></li>
+                <li><a href="/">Hjem</a></li>
                 <li><a href="{% url "event_list" %}">Arrangement</a></li>
                 <li><a href="{% url "jobs_list" %}">Karriere</a></li>
                 <li><a href="http://wiki.nabla.no/">Wiki</a></li>
