--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -273,7 +273,7 @@
                 Nabla <br>
                 Kjemiblokk 2 <br>
                 Sem Sælands vei 10, NTNU <br>
-                N-7491 Trondheim <br>
+                7034 Trondheim <br>
                 Norway
             </address>
         </div>
