--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -53,7 +53,9 @@
 <header>
     <div class="page-header">
         <a class="pull-left" href="/">
+            {% block header_logo %}
             <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
+            {% endblock header_logo %}
         </a>
 
         <form id="searchtop" class="pull-right form-search" method="get" action="/search/">
@@ -70,6 +72,7 @@
 <nav class="navbar">
 <div class="navbar-inner">
 <div class="container" style="width: auto;">
+{% block navbar_container %}
 
         {% comment %}
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -196,6 +199,7 @@
 
             {#<!--</div>--><!-- end nav-collapse-->#}
         
+{% endblock navbar_container %}
 </div> {# end container #}
 </div> {# end navbar-inner #}
 </nav> {# end navbar #}
