--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -66,9 +66,11 @@
                 </button>
             </div>
         </form>
-        <a class="pull-right" href="{{ STATIC_URL }}CMR_artikkel.pdf">
+        {% block partner_logo %}
+        <a class="pull-right" href="/hovedsamarbeidspartner/cmr/">
             <img src="{{ STATIC_URL }}img/CMR_logo.png" alt="CMR" style="height: 50px; width: auto; ">
         </a>
+        {% endblock %}
 
 
     </div>
