--- a/nablaweb/templates/flatpages/bn.html
+++ b/nablaweb/templates/flatpages/bn.html
@@ -13,6 +13,8 @@
     <img src="{{ STATIC_URL }}img/bedkomNabla.jpg" alt="Bedriftskontakten Nabla">
 {% endblock %}
 
+{% block partner_logo %}{% endblock %}
+
 
 {% block navbar_container %}
     <ul class="nav">
@@ -32,11 +34,13 @@
 {% endblock %}
 
 {% block sidebar %}
+    <a href="/hovedsamarbeidspartner/cmr/">
     <div class="ad box">
-        <span class="label">Hovedsponsor:</span>
+        <span class="label">Hovedsamarbeidspartner:</span>
         <br><br>
         <img src="http://nabla.no/media/news_pictures/CMR_logo_None.jpg">
     </div>
+    </a>
 
     {% if upcoming_bedpresses %}
     <h3>Kommende presentasjoner</h3>
@@ -70,7 +74,7 @@
     <style>
     #whitebox {
     background-color: #f5f5f5;
-    background-image: url(http://upload.wikimedia.org/wikipedia/en/b/bb/Graduated_Blue_Background.png);
+    background-image: url({{ STATIC_URL }}bn/Graduated_Blue_Background.png);
     background-size: cover;
     }
 
