Lager en oversiktsside for Skraattcast.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -115,6 +115,7 @@
 
             {# Faste lenker om Nabla #}
 			<li><a href="{% url "nablad_list" %}">Nabladet</a></li>
+            <li><a href="{% url "skraattcast_index" %}">Skraattcast</a></li>
                     </ul>
                 </li>
 
