--- a/nablaweb/templates/skraattcast/play.html
+++ b/nablaweb/templates/skraattcast/play.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Skraattcast: {{ cast.title }}{% endblock %}
+{% block title %}Skråttcast: {{ cast.title }}{% endblock %}
 
 {% block content %}
     <a rel='nofollow' href='{{ cast.url }}' id='{{ cast.htmlid }}'>{{ cast.title }}</a>
