--- a/nablaweb/news/templates/news/news_summary_include.html
+++ b/nablaweb/news/templates/news/news_summary_include.html
@@ -4,7 +4,7 @@
 {% load classname %}
 
 
-<div class="span{% if narrow %}4{% else %}8{% endif %} news_item {{ news.content_type.model }}">
+<div class="col-md-{% if narrow %}4{% else %}8{% endif %} news_item {{ news.content_type.model }}">
     {% if news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
         {% if narrow %}
