--- a/nablaweb/templates/_bootstrap_include.html
+++ b/nablaweb/templates/_bootstrap_include.html
@@ -1,10 +1,11 @@
 {% load sekizai_tags %}
 {% addtoblock "css" %}
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 {% endaddtoblock %}
 
 {% addtoblock "js" %}
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endaddtoblock %}
 
 
