--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -45,16 +45,18 @@
     <div class="page-header">
         <a class="pull-left" href="/">
             {% block header_logo %}
-            <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
+                <img src="{{ STATIC_URL }}img/nabla_logo_black.png" alt="Nabla">
             {% endblock header_logo %}
         </a>
 
-        <form id="searchtop" class="pull-right form-search" method="get" action="/search/">
-            <div class="input-append">
-                <input name="q" placeholder="Søk..." type="text" class="span2 search-query">
-                <button type="submit" class="btn">
-                    <i class="icon-search"></i> 
-                </button>
+        <form id="searchtop" class="pull-right" method="get" action="/search/">
+            <div class="input-group" style="width:150px">
+                <input name="q" placeholder="Søk..." type="text" class="form-control">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button>
+                </span>
             </div>
         </form>
         {% block partner_logo %}
@@ -66,36 +68,24 @@
     </div>
 </header>
 
-<nav class="navbar">
-<div class="navbar-inner">
+<nav class="navbar navbar-default">
 <div class="container" style="width: auto;">
 {% block navbar_container %}
+    {# navigasjonslenker #}
+    <ul class="nav navbar-nav">
+        <li><a href="/">Hjem</a></li>
+        <li><a href="{% url "event_list" %}">Arrangement</a></li>
+        <li><a href="{% url "jobs_list" %}">Karriere</a></li>
+        <li><a href="http://wiki.nabla.no/">Wiki</a></li>
 
-        {% comment %}
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </a>
-        {% endcomment %}
-
-        {#<!--<div class="nav-collapse">-->{# blir gjemt ved små skjermstørrelser #}
-
-            {# navigasjonslenker #}
-            <ul class="nav">
-                <li><a href="/">Hjem</a></li>
-                <li><a href="{% url "event_list" %}">Arrangement</a></li>
-                <li><a href="{% url "jobs_list" %}">Karriere</a></li>
-                <li><a href="http://wiki.nabla.no/">Wiki</a></li>
-
-                <li class="dropdown">
-                    <a href="#komiteer"
-                        class="dropdown-toggle no-ajaxy"
-                        data-toggle="dropdown">
-                        Om Nabla
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" >
+        <li class="dropdown">
+            <a href="#om"
+                class="dropdown-toggle"
+                data-toggle="dropdown">
+                    Om Nabla
+                    <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" >
 
             {# Hent alle sider som starter på /om/ #}
             {% get_flatpages '/om/' as about_pages %}
@@ -104,87 +94,77 @@
             {% endfor %}
 
             {# Faste lenker om Nabla #}
-			<li><a href="{% url "nablad_list" %}">Nabladet</a></li>
-            <li><a href="{% url "skraattcast_index" %}">Skraattcast</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#komiteer"
-                        class="dropdown-toggle no-ajaxy"
-                        data-toggle="dropdown">
-                        Komiteer
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" >
-                        {% cache 3600 com_list_dropdown %}
-                        {# Liste over komiteer #}
-                        {% for com in coms %}
-                        <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
-                        {% empty %}
-                        <li><a>Ingen komiteer eksisterer</a></li>
-                        {% endfor %}
-                        {% endcache %}
-                    </ul>
-                </li>
-                <li><a href="http://bokskap.nabla.no">Bokskap</a></li>
-
-		{% if not user.is_authenticated %}<li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>{% endif %}
-
-
+			    <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
+                <li><a href="{% url "skraattcast_index" %}">Skraattcast</a></li>
             </ul>
-            {# end navigasjonslenker #}
+        </li>
+        <li class="dropdown">
+            <a href="#komiteer"
+                class="dropdown-toggle"
+                data-toggle="dropdown">
+                    Komiteer
+                    <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" >
+                {% cache 3600 com_list_dropdown %}
+                {# Liste over komiteer #}
+                {% for com in coms %}
+                    <li><a href="{{ com.get_absolute_url }}">{{ com.com.name }}</a></li>
+                {% empty %}
+                    <li><a>Ingen komiteer eksisterer</a></li>
+                {% endfor %}
+                {% endcache %}
+            </ul>
+        </li>
+        <li><a href="http://bokskap.nabla.no">Bokskap</a></li>
+		{% if not user.is_authenticated %}
+            <li><a href="{% url "accounts.views.user_register" %}">Registrer deg</a></li>
+        {% endif %}
+    </ul>
+    {# end navigasjonslenker #}
 
-            {% if user.is_authenticated %}
-
-            {# bruker-dropdown #}
-            <ul class="nav pull-right">
-                <li class="dropdown pull-right">
-                    <a href="#bruker"
-                        class="dropdown-toggle no-ajaxy"
-                        data-toggle="dropdown">
+    {% if user.is_authenticated %}
+        {# bruker-dropdown #}
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown navbar-right">
+                <a href="#bruker"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown">
                         <span class="icon-user"></span>{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}
                         <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{% url "accounts.views.view_member_profile" user.username %}">Vis profil</a></li>
-                        <li><a href="{% url "accounts.views.edit_profile" %}">Endre profil</a></li>
-                        <li><a href="{% url "password_change" %}">Endre passord</a></li>
-                        <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
-                        <li><a class="no-ajaxy" href="/logout">Logg ut</a></li>
-                        <li class="divider"></li>
-                        <li><a href="{% url "accounts.views.list" %}">Medlemsliste</a></li>
-                        {% if user.is_staff %}
-                        <li><a class="no-ajaxy" href="/admin">Admin</a></li>
-                        {% endif %}
-                    </ul>
-                </li>
-            </ul>
-            {# end bruker-dropdown #}
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url "accounts.views.view_member_profile" user.username %}">Vis profil</a></li>
+                    <li><a href="{% url "accounts.views.edit_profile" %}">Endre profil</a></li>
+                    <li><a href="{% url "password_change" %}">Endre passord</a></li>
+                    <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
+                    <li><a href="/logout">Logg ut</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{% url "accounts.views.list" %}">Medlemsliste</a></li>
+                    {% if user.is_staff %}
+                        <li><a href="/admin">Admin</a></li>
+                    {% endif %}
+                </ul>
+            </li>
+        </ul>
+        {# end bruker-dropdown #}
+    {% else %}
+        {# loginboks #}
+        <!--        <a class="nav navbar-right btn btn-default"
+        href="/login">Logg inn</a>-->
+        <form id="navbar-loginbox" class="navbar-form navbar-right " action="/login/" method="post">
+            {% csrf_token %}
+            <input class="form-control" type="text" placeholder="Bruker" name="username" />
+            <input class="form-control" type="password"  placeholder="Passord" name="password" />
+            <button class="submit btn btn-default" type="submit">Login</button>
+        </form>
 
-            {% else %}
-
-            {# loginboks #}
-            <form class="navbar-form pull-right" action="/login/" method="post">
-                {% csrf_token %}
-                <table>
-                    <tr>
-                        <td><input type="text" placeholder="Bruker" name="username" /></td>
-                        <td><input type="password"  placeholder="Passord" name="password" /></td>
-                        <td><button class="submit btn btn-info" type="submit">Login</button></td>
-                    </tr>
-                </table>
-            </form>
-            {# end loginboks #}
-
-            {% endif %}
-
-            {#<!--</div>--><!-- end nav-collapse-->#}
-
+        {# end loginboks #}
+    {% endif %}
 {% endblock navbar_container %}
-</div> {# end container #}
-</div> {# end navbar-inner #}
-</nav> {# end navbar #}
 
+</div> {# end container #}
+</nav> {# end navbar #}
 
 {% if messages %}
     {% for message in messages %}
@@ -201,7 +181,7 @@
 <div class="row"><!-- main row -->
 
     {# content #}
-    <div class="span8">
+    <div class="col-md-8">
         {% block content %} 
         {% endblock content %}
 
@@ -210,7 +190,7 @@
     </div> 
     {# end content container #}
 
-    <aside class="span4">{# sidebar #}
+    <aside class="col-md-4">{# sidebar #}
 
         {% block sidebar %}
             <!--sidebar er tom-->
@@ -236,7 +216,7 @@
     <div class="row">
 
         {# kontakt #}
-        <div class="span4 kontakt">
+        <div class="col-md-4 kontakt">
             <h2>Kontakt</h2>
 
             <p>Du kan nå oss på <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a></p>
@@ -254,9 +234,9 @@
         {# end kontakt #}
 
         {# om nabla #}
-        <div class="span4">
+        <div class="col-md-4">
             <h2>Tilbakemelding</h2>
-            <p>Den nye Nabla-nettsiden er fremdeles i sin barndom. Har du
+            <p>Har du
             funnet en feil, får du ikke logget på, eller er det noe som burde
             forbedres? Kontakt webkom:<br>
                 <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
@@ -266,7 +246,7 @@
         {# end om nabla #}
 
         {# nablalogo #}
-        <div class="span4 center" id="nablafooter">
+        <div class="col-md-4 center" id="nablafooter">
             <br><br>
             <img src="{{ STATIC_URL }}img/nabla-white.svg" alt="nabla logo">
         </div>
